# dioxus_rerun

./: .gitignore  Cargo.toml  README.md  build.sh
app/: Cargo.toml
app/public/: index.html
app/src/: main.rs
fullstack/: Cargo.toml
fullstack/assets/: hello.css
fullstack/src/: main.rs
