[workspace]
members = ["app", "fullstack"]


[workspace.dependencies]

dioxus = { version = "*" }
dioxus-ssr = { version = "*" }

axum = { version = "0.7.0" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
