[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# dioxus = { version = "0.6.2", features = ["liveview"] }
# dioxus-liveview = { version = "0.6.2" }
# axum = { version = "0.7.0", optional = true }
# tokio = { version = "1.0", features = ["full"], optional = true }
# dioxus-cli-config = { version = "0.6.2", optional = true }

axum = "0.7"
dioxus = { workspace = true, features = ["fullstack"] }
dioxus-ssr = { workspace = true }
tokio = { workspace = true, features = ["full"] }
